--- a/templates/apple.html
+++ b/templates/apple.html
@@ -19,7 +19,7 @@
 
 <body>
 
-    <!-- Top bar -->
+    <!-- Top bars -->
     <div class="container-fluid p-0 apple-nav fixed-top">
         
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
